# kdecoration2-kde2

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  skeleton.cpp  skeleton.h  skeleton.json
